[gd_scene load_steps=6 format=3 uid="uid://bl0xy037fyfva"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_qwb1g"]

[sub_resource type="SystemFont" id="SystemFont_ol3p1"]

[sub_resource type="LabelSettings" id="LabelSettings_gxp88"]
font = SubResource("SystemFont_ol3p1")
font_size = 32
font_color = Color(0.294118, 0.45098, 0.294118, 1)

[sub_resource type="LabelSettings" id="LabelSettings_duvl3"]
font_size = 8
font_color = Color(0.150244, 0.490646, 9.62615e-07, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lqe2d"]
font_size = 10
font_color = Color(0.294118, 0.45098, 0.294118, 1)

[node name="MainMenu" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.419608, 1, 0.239216, 1)
script = ExtResource("1_qwb1g")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_right = 116.0
offset_bottom = 55.0
grow_horizontal = 2
text = "Snake Clone"
label_settings = SubResource("LabelSettings_gxp88")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_right = -16.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayButton" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.419608, 1, 0.239216, 1)
theme_override_font_sizes/font_size = 18
text = "Play"

[node name="DifficultySlider" type="HSlider" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
min_value = 1.0
max_value = 5.0
value = 1.0

[node name="DifficultyLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Difficulty: 1"
label_settings = SubResource("LabelSettings_duvl3")

[node name="QuitButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.419608, 1, 0.239216, 1)
text = "Quit"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -8.0
offset_top = 40.0
offset_right = 93.0
offset_bottom = 63.0
grow_horizontal = 2
text = "By Alfonzone"
label_settings = SubResource("LabelSettings_lqe2d")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/DifficultySlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
